# vom_challenge

./: README.md
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/config/: __init__.py  di.py  env.py  exception.py  factory.py  log_conf.yaml  logger.py
backend/src/domain/common/: __init__.py
backend/src/domain/common/controllers/: base.py
backend/src/domain/common/controllers/docs/: Decision Policy API.postman_collection.json  additional_responses.py
backend/src/domain/common/enums/: blocks_properties.py
backend/src/domain/common/repository/entities/: __init__.py
backend/src/domain/common/repository/exceptions/: __init__.py
backend/src/domain/common/service/exceptions/: __init__.py
backend/src/domain/config_backend/controllers/: config_backend.py
backend/src/domain/config_backend/enums/: error_messages.py
backend/src/domain/config_backend/repositories/: config_backend.py
backend/src/domain/execution_engine/controllers/: execution_engine.py
backend/src/domain/execution_engine/enums/: error_messages.py
backend/src/domain/execution_engine/services/: execution_engine.py
backend/src/infra/database/: base.py  postgresql.py  sqlite.py
backend/src/infra/database/factory/: enums.py  factory.py
backend/tests/: __init__.py
backend/tests/unit_tests/domain/common/: test_block_properties.py
backend/tests/unit_tests/domain/config_backend/: __init__.py  conftest.py  test_policy_flow.py
backend/tests/unit_tests/domain/execution_engine/: conftest.py  test_policy_evaluation.py
(+6 files in other folders)
