[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vinícius Aguiar", email = "vaguiararqdevsoftware@proton.me" }
]
dependencies = [
    "fastapi>=0.115.11",
    "sqlalchemy>=2.0.38",
    "dependency-injector>=4.46.0",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.2",
    "sse-starlette>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
